add data-storer and trade-decider boilerplate

--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
       "stage-3"
     ]
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "serverless-python-requirements": "^5.1.0"
+  },
   "dependencies": {}
 }
