--- a/services/rate-retriever/package.json
+++ b/services/rate-retriever/package.json
@@ -28,6 +28,7 @@
     "@lumigo/tracer": "^1.35.1",
     "aws-sdk": "^2.677.0",
     "coinbase": "^2.0.8",
+    "pino": "^6.3.0",
     "uuid": "^8.0.0"
   }
 }
