udpdate python cache dir

--- a/serverless.yml
+++ b/serverless.yml
@@ -2,6 +2,9 @@ service: kripto
 
 custom:
   secrets: ${file(secrets.json)}
+  pythonRequirements:
+    useDownloadCache: true
+    useStaticCache: true
 
 provider:
   name: aws
