--- a/services/trade-decider/Makefile
+++ b/services/trade-decider/Makefile
@@ -2,7 +2,7 @@
 default: build
 
 vendor:
-	pip install -r requirements.txt
+	pip3 install -r requirements.txt
 
 build:
-	pip install -r requirements.txt
+	pip3 install -r requirements.txt
