update python make command

--- a/services/trade-decider/Makefile
+++ b/services/trade-decider/Makefile
@@ -2,7 +2,11 @@
 default: build
 
 vendor:
+	python3 -m venv env
+	source ./env/bin/activate
 	pip3 install -r requirements.txt
 
 build:
+	python3 -m venv env
+	source ./env/bin/activate
 	pip3 install -r requirements.txt
