--- a/services/trade-decider/Makefile
+++ b/services/trade-decider/Makefile
@@ -2,11 +2,7 @@
 default: build
 
 vendor:
-	python3 -m venv env
-	source ./env/bin/activate
-	pip3 install -r requirements.txt
+	pip3 install --user -r requirements.txt
 
 build:
-	python3 -m venv env
-	source ./env/bin/activate
-	pip3 install -r requirements.txt
+	pip3 install --user -r requirements.txt
