update python make command

--- a/services/trade-decider/Makefile
+++ b/services/trade-decider/Makefile
@@ -2,7 +2,7 @@
 default: build
 
 vendor:
-	pip3 install --user -r requirements.txt
+	sudo pip3 install -r requirements.txt
 
 build:
-	pip3 install --user -r requirements.txt
+	sudo pip3 install -r requirements.txt
