--- a/package.json
+++ b/package.json
@@ -22,5 +22,7 @@
     ]
   },
   "devDependencies": {},
-  "dependencies": {}
+  "dependencies": {
+    "serverless-python-requirements": "^5.1.0"
+  }
 }
