install pip in ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -126,6 +126,7 @@ jobs:
   deploy:
     docker:
       - image: circleci/node:8.10
+      - image: circleci/python:3.6.1
     steps:
       - attach_workspace:
           at: .
@@ -155,6 +156,12 @@ jobs:
             "${COINBASE_PRO_SANDBOX_KEY}" "${COINBASE_PRO_SANDBOX_PASSPHRASE}" "${COINBASE_PRO_SANDBOX_SECRET}" \
             "${AWS_ACCOUNT_ID}" \
             "${LUMIGO_TOKEN}" > secrets.json
+
+      - run:
+          name: Install pip
+          command: |
+            sudo apt update
+            sudo apt install python-pip
 
       - run:
           name: Install Serverless CLI, Configure Profile, Deploy
