--- a/serverless.yml
+++ b/serverless.yml
@@ -59,15 +59,13 @@ functions:
   data-reader:
     runtime: go1.x
     memorySize: 128
-    module: services/data-storer
-    handler: bin/data-reader
+    handler: services/data-storer/bin/data-reader
     environment:
       MONGO_URI: ${self:custom.secrets.mongoUri}
   rate-writer:
     runtime: go1.x
     memorySize: 128
-    module: services/data-storer
-    handler: bin/rate-writer
+    handler: services/data-storer/bin/rate-writer
     environment:
       MONGO_URI: ${self:custom.secrets.mongoUri}
     reservedConcurrency: 1
@@ -81,8 +79,7 @@ functions:
   trade-writer:
     runtime: go1.x
     memorySize: 128
-    module: services/data-storer
-    handler: bin/trade-writer
+    handler: services/data-storer/bin/trade-writer
     environment:
       MONGO_URI: ${self:custom.secrets.mongoUri}
     reservedConcurrency: 1
@@ -96,8 +93,7 @@ functions:
   rate-retriever:
     runtime: nodejs12.x
     memorySize: 128
-    module: services/rate-retriever
-    handler: handler
+    handler: services/rate-retriever.handler
     environment:
       QUEUE_URL: "https://sqs.${self:provider.region}.amazonaws.com/${self:custom.secrets.awsAccountId}/RateUpdate"
       COINBASE_API_KEY: ${self:custom.secrets.coinbaseApiKey}
@@ -107,8 +103,7 @@ functions:
   trade:
     runtime: go1.x
     memorySize: 128
-    module: services/trader
-    handler: bin/trade
+    handler: services/trader/bin/trade
     environment:
       TOPIC: "arn:aws:sns:${self:provider.region}:${self:custom.secrets.awsAccountId}:Trade"
       COINBASE_PRO_KEY: ${self:custom.secrets.coinbaseProApiKey}
