increasee timeout for decider

--- a/serverless.yml
+++ b/serverless.yml
@@ -117,8 +117,9 @@ functions:
   trade-decider:
     runtime: python3.8
     memorySize: 128
+    timeout: 120
     module: services/trade-decider
     handler: app.handler
     environment:
       READER_FUNCTION_NAME: "${self:provider.profile}-${self:provider.stage}-data-reader"
-      TRADER_FUNCTION_NAME: "${self:provider.profile}-${self:provider.stage}-trader"
+      TRADER_FUNCTION_NAME: "${self:provider.profile}-${self:provider.stage}-trad"
