make trade invocation async

--- a/serverless.yml
+++ b/serverless.yml
@@ -122,4 +122,4 @@ functions:
     handler: app.handler
     environment:
       READER_FUNCTION_NAME: "${self:provider.profile}-${self:provider.stage}-data-reader"
-      TRADER_FUNCTION_NAME: "${self:provider.profile}-${self:provider.stage}-trad"
+      TRADER_FUNCTION_NAME: "${self:provider.profile}-${self:provider.stage}-trade"
