--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -299,12 +299,12 @@ workflows:
           docker_image: cimg/openjdk:14.0
           service_path: shared/java/idempotency
           requires:
-            - vendor
+            - checkout-code
       - integration:
           docker_image: cimg/openjdk:14.0
           service_path: shared/java/idempotency
           requires:
-            - vendor
+            - checkout-code
   account-retriever:
     jobs:
       - checkout-code
@@ -331,16 +331,6 @@ workflows:
             branches:
               only:
                 - master
-#      - build:
-#          name: build-trade-decider
-#          docker_image: circleci/python:3.6.1
-#          service_path: services/trade-decider
-#          requires:
-#            - checkout-code
-#          filters:
-#            branches:
-#              only:
-#                - master
       - build:
           name: build-data-storer
           docker_image: cimg/go:1.14
