--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -146,7 +146,8 @@ jobs:
               "coinbaseProSandboxPassphrase":"%s",
               "coinbaseProSandboxSecretKey":"%s",
               "awsAccountId": "%s",
-              "lumigoToken": "%s"
+              "lumigoToken": "%s",
+              "sendGridApiKey": "%s"
             }\n'
             printf "$JSON" \
             "${MONGO_URI}" \
@@ -154,8 +155,7 @@ jobs:
             "${COINBASE_API_KEY}" "${COINBASE_SECRET_KEY}" \
             "${COINBASE_PRO_KEY}" "${COINBASE_PRO_PASSPHRASE}" "${COINBASE_PRO_SECRET}" \
             "${COINBASE_PRO_SANDBOX_KEY}" "${COINBASE_PRO_SANDBOX_PASSPHRASE}" "${COINBASE_PRO_SANDBOX_SECRET}" \
-            "${AWS_ACCOUNT_ID}" \
-            "${LUMIGO_TOKEN}" > secrets.json
+            "${AWS_ACCOUNT_ID}" "${LUMIGO_TOKEN}" "${SEND_GRID_API_KEY}" > secrets.json
 
       - run:
           name: Install pip
@@ -296,12 +296,12 @@ workflows:
     jobs:
       - checkout-code
       - unit:
-          docker_image: cimg/openjdk:14.0
+          docker_image: cimg/openjdk:11.0
           service_path: shared/java/idempotency
           requires:
             - checkout-code
       - integration:
-          docker_image: cimg/openjdk:14.0
+          docker_image: cimg/openjdk:11.0
           service_path: shared/java/idempotency
           requires:
             - checkout-code
@@ -310,17 +310,17 @@ workflows:
       - checkout-code
       - build:
           name: build-java-idempotency
-          docker_image: cimg/openjdk:14.0
+          docker_image: cimg/openjdk:11.0
           service_path: shared/java/idempotency
           requires:
             - checkout-code
       - unit:
-          docker_image: cimg/openjdk:14.0
+          docker_image: cimg/openjdk:11.0
           service_path: services/account-retriever
           requires:
             - build-java-idempotency
       - integration:
-          docker_image: cimg/openjdk:14.0
+          docker_image: cimg/openjdk:11.0
           service_path: services/account-retriever
           requires:
             - build-java-idempotency
@@ -363,7 +363,7 @@ workflows:
                 - master
       - build:
           name: build-java-idempotency
-          docker_image: cimg/openjdk:14.0
+          docker_image: cimg/openjdk:11.0
           service_path: shared/java/idempotency
           requires:
             - build-trader
@@ -373,7 +373,7 @@ workflows:
                 - master
       - build:
           name: build-account-retriever
-          docker_image: cimg/openjdk:14.0
+          docker_image: cimg/openjdk:11.0
           service_path: services/account-retriever
           requires:
             - build-java-idempotency
