--- a/serverless/resources.yml
+++ b/serverless/resources.yml
@@ -119,13 +119,13 @@ Resources:
   storeRateQueue:
     Type: "AWS::SQS::Queue"
     Properties:
-      QueueName: "RateUpdate"
+      QueueName: "StoreRate"
       RedrivePolicy:
         deadLetterTargetArn: !GetAtt
           - storeRateQueueDLQ
           - Arn
         maxReceiveCount: 3
-  # Create our 'storeTradeQueue' Dead Letter Queue SQS queue
+  # Create our 'storeRateQueue' Dead Letter Queue SQS queue
   storeRateQueueDLQ:
     Type: AWS::SQS::Queue
     Properties:
@@ -144,7 +144,7 @@ Resources:
   initiateTradeQueueDLQ:
     Type: AWS::SQS::Queue
     Properties:
-      QueueName: "InitiateTradeQueueDLQ"
+      QueueName: "InitiateTradeDLQ"
   # Create our queue policy for the 'storeRateQueue'
   snsToStoreRateQueueSqsPolicy:
     Type: AWS::SQS::QueuePolicy
