Add visibility timeout for initiate trade queue

--- a/serverless/resources.yml
+++ b/serverless/resources.yml
@@ -135,6 +135,7 @@ Resources:
     Type: "AWS::SQS::Queue"
     Properties:
       QueueName: "InitiateTrade"
+      VisibilityTimeout: 120
       RedrivePolicy:
         deadLetterTargetArn: !GetAtt
           - initiateTradeQueueDLQ
