update ci to build funcs in correct order

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -366,7 +366,7 @@ workflows:
           docker_image: cimg/openjdk:11.0
           service_path: shared/java/idempotency
           requires:
-            - build-trader
+            - build-rate-retriever
           filters:
             branches:
               only:
