--- a/services/receipt-emailer/build.gradle
+++ b/services/receipt-emailer/build.gradle
@@ -16,10 +16,15 @@ buildscript {
 
     repositories {
         mavenCentral()
+        jcenter()
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.71"
         classpath "io.spring.gradle:dependency-management-plugin:1.0.7.RELEASE"
+        classpath "com.github.jengelman.gradle.plugins:shadow:5.2.0"
     }
 
 
@@ -30,6 +35,7 @@ apply plugin: 'application'
 apply plugin: "io.spring.dependency-management"
 
 mainClassName = 'com.cshep4.kripto.receiptemailer.Handler'
+apply plugin: "com.github.johnrengelman.shadow"
 
 defaultTasks 'run'
 
