--- a/serverless.yml
+++ b/serverless.yml
@@ -43,12 +43,7 @@ resources:
 package:
   individually: true
   exclude:
-    - /**
-    - services/
-    - shared/
-    - docs/
-    - .circleci/
-    - node_modules/
+    - ./**
 
 functions:
   data-reader:
@@ -56,8 +51,6 @@ functions:
     memorySize: 128
     handler: services/data-storer/bin/data-reader
     package:
-      exclude:
-        - /**
       include:
         - services/data-storer/bin/data-reader
     environment:
@@ -66,6 +59,9 @@ functions:
     runtime: go1.x
     memorySize: 128
     handler: services/data-storer/bin/rate-writer
+    package:
+      include:
+        - services/data-storer/bin/rate-writer
     environment:
       MONGO_URI: ${self:custom.secrets.mongoUri}
     reservedConcurrency: 1
@@ -81,8 +77,6 @@ functions:
     memorySize: 128
     handler: services/data-storer/bin/trade-writer
     package:
-      exclude:
-        - /**
       include:
         - services/data-storer/bin/trade-writer
     environment:
@@ -100,8 +94,6 @@ functions:
     memorySize: 128
     handler: services/rate-retriever.handler
     package:
-      exclude:
-        - /**
       include:
         - services/rate-retriever
     environment:
@@ -116,8 +108,6 @@ functions:
     memorySize: 128
     handler: services/trader/bin/trade
     package:
-      exclude:
-        - /**
       include:
         - services/trader/bin/trade
     environment:
@@ -137,8 +127,6 @@ functions:
     module: services/trade-decider
     handler: app.handler
     package:
-      exclude:
-        - /**
       include:
         - services/trade-decider
     environment:
