--- a/services/trade-decider/requirements.txt
+++ b/services/trade-decider/requirements.txt
@@ -1,3 +1,10 @@
-botocore
-boto3
-# lumigo_tracer
+boto3==1.9.121
+botocore==1.15.18
+jmespath==0.9.4
+numpy==1.18.4
+pandas==1.0.3
+python-dateutil==2.8.1
+pytz==2020.1
+s3transfer==0.2.1
+six==1.12.0
+urllib3==1.24.3
