--- a/services/trader/Makefile
+++ b/services/trader/Makefile
@@ -3,6 +3,7 @@ default: build
 
 build:
 	GOOS=linux go build -o bin/trade ./cmd/trade
+	GOOS=linux go build -o bin/get-wallet ./cmd/get-wallet
 
 vendor:
 	go install github.com/golang/mock/mockgen
