--- a/shared/go/idempotency/Makefile
+++ b/shared/go/idempotency/Makefile
@@ -8,4 +8,4 @@ test-unit:
 	go test ./... -mod vendor -v -race
 
 test-integration:
-	go test ./... -mod vendor -v -race -tags integration
+	go test ./... -mod vendor -v -tags integration
